# simple-compiler

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/semantic/: mod.rs
tests/: lexer_test.rs
